[package]
name = "rust-lisp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# futures = "0.3.14"
# tokio = { version = "1", features = ["full"] }
flume = "0.10.13"
num_cpus = "1.13.1"
# [dependencies.async-std]
#  version = "1.6"
#  features = ["attributes"]